--- a/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
+++ b/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
@@ -596,7 +596,7 @@ Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthot
 
 \begin{center}
 \tiny
-Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 39
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 39
 \end{center}
 \end{frame}
 
@@ -619,12 +619,12 @@ Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 39
 
 \begin{center}
 \tiny
-Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 38
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 38
 \end{center}
 \end{frame}
 
 \begin{frame}
-{\centerline{Drawing in a letter to Wilhelm}}
+{\centerline{Drawing in a letter to Wilhelm(1/2)}}
 
 \begin{itemize}
    \item Drawing to describe a model that has been devised
@@ -642,9 +642,30 @@ Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 38
 
 \begin{center}
 \tiny
-Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 45, with the picture from Sigmund Freud, ``Aus den Anf\"{a}ngen der Psychoanalyse : Briefe an Wilhelm Fliess, Abhandlungen und Notizen aus den Jahren 1887-1902,'' London : Imago Pub. Co, 1950, pag. 114
+Sources of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 45, with the picture from Sigmund Freud, ``Aus den Anf\"{a}ngen der Psychoanalyse : Briefe an Wilhelm Fliess, Abhandlungen und Notizen aus den Jahren 1887-1902,'' London : Imago Pub. Co, 1950, pag. 114
 \end{center}
 \end{frame}
+
+\begin{frame}
+{\centerline{Drawing in a letter to Wilhelm(2/2)}}
+
+\begin{itemize}
+   \item But look at how he got there:
+ \end{itemize} 
+
+
+\begin{center}
+ \includegraphics[width=5cm]{P2023.AIBCCSS.Drawing/towardBuildingASchema.jpg}
+ 
+ \end{center}
+
+
+\begin{center}
+\tiny
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 51
+\end{center}
+\end{frame}
+
 
 
 
