--- a/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
+++ b/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
@@ -163,6 +163,7 @@ Lezione 7: Drawing as a Cognitive Experience (for SW Development)} % The short t
     \item Understanding ourselves and the others
     \item Drawing
     \item Mental states while drawing
+    \item Processes in drawing and in software
     \end{itemize}
 \end{frame}
 
@@ -878,6 +879,169 @@ Source of the content: Gcinizwe Dlamini, Giancarlo Succi, Nataliya Tupikina ``Is
 \end{center}
 \end{frame}
 
+\begin{frame}
+{\centerline{Processes in drawing and in software}}
+
+\begin{itemize}
+\item Iterative development
+\item Customer orientation
+\item Customer involvement
+\item Pairing
+\item Elimination of waste
+\item Reuse
+ \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Incremental development -- 1}}
+
+\begin{center}
+\includegraphics[width=9cm]{P2023.AIBCCSS.Drawing/Leonardo.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Incremental development -- 2}}
+
+\begin{center}
+\includegraphics[width=9cm]{P2023.AIBCCSS.Drawing/zasedanie.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Incremental development -- 3}}
+
+\begin{center}
+\includegraphics[width=9cm]{P2023.AIBCCSS.Drawing/repin_sketch.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Incremental development -- 4}}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{P2023.AIBCCSS.Drawing/sketch1.jpg}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.8\linewidth]{P2023.AIBCCSS.Drawing/sketch2.jpg}
+\end{subfigure}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Customer orientation}}
+
+\begin{center}
+\includegraphics[width=8cm]{P2023.AIBCCSS.Drawing/serov_turchaninov.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Customer involvement}}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{P2023.AIBCCSS.Drawing/yoko.jpg}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.8\linewidth]{P2023.AIBCCSS.Drawing/smoke.jpeg}
+\end{subfigure}
+\end{figure}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Pair Painting -- 1}}
+
+\begin{center}
+Rubens and Breughel: Smell\\ 
+\vspace{0.3cm}
+\includegraphics[width=9cm]{P2023.AIBCCSS.Drawing/rub_and_br.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Pair Painting -- 2}}
+
+\begin{center}
+Shishkin and Savitsky: Morning in a pine forest\\ 
+\vspace{0.3cm}
+\includegraphics[width=9cm]{P2023.AIBCCSS.Drawing/shish.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Pair Painting -- 3}}
+
+\begin{center}
+Yakovlev and Shukhaev: Harlequin and Pierrot\\ 
+\vspace{0.3cm}
+\includegraphics[width=5cm]{P2023.AIBCCSS.Drawing/yakovlev.jpeg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Elimination of Waste}}
+
+\begin{center}
+\includegraphics[width=4.5cm]{P2023.AIBCCSS.Drawing/An_Anna_Blume.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Reuse -- 1}}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{P2023.AIBCCSS.Drawing/joy-of-life.jpg}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{P2023.AIBCCSS.Drawing/dance.jpg}
+\end{subfigure}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Reuse -- 2}}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{P2023.AIBCCSS.Drawing/music1.jpg}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{P2023.AIBCCSS.Drawing/music.jpg}
+\end{subfigure}
+\end{figure}
+
+\end{frame}
 
 
 \begin{frame}
