--- a/P2023.AIBCCSS.L08.CognitiveModelsInSoftwareDevelopment.Change.tex
+++ b/P2023.AIBCCSS.L08.CognitiveModelsInSoftwareDevelopment.Change.tex
@@ -191,10 +191,20 @@ still there is not an established approach to manage change into processes and p
 {\centerline{About Change (1/4)}}
  
 \begin{itemize}
-\item From a anthropological perspective, changing is an important ability of the humankind
-
+ \item From a anthropological perspective, changing is an important ability of the humankind
 \begin{itemize}
 \item  the ability to ``change'' has allowed us to survive and prosper for millenniums.
+\end{itemize} 
+\item Change has been part of the culture of the human kind
+\begin{itemize}
+\item the religion of the ancient Greece was nurtured by a constant change of the divinity and the humanity:
+\begin{itemize}
+\item see for instance the \foreignlanguage{greek}{μετεμψύχωσις} 
+\item or the the Eraclitean statement \foreignlanguage{greek}{πάντα ῥεῖ}.
+\end{itemize} 
+
+\end{itemize} 
+
 \end{itemize} 
 
 \end{frame}
@@ -202,7 +212,8 @@ still there is not an established approach to manage change into processes and p
 
 \begin{frame}
 {\centerline{The approach of this lecture}}
- 
+
+
 \begin{itemize}
 \item We will use one of the several existing approaches, focusing on the work of Freud, through the analysis of Gianluca Solla in the book ``Disegnare, la formula di Freud,'' published by Orthotes in 2022
 \item We will consider Freud both as:
