More on Lecture 8

--- a/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
+++ b/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
@@ -183,7 +183,7 @@ Lezione 7: Drawing as a Cognitive Experience (for SW Development)} % The short t
 \begin{itemize}
 \item And likewise do the people around us
 \end{itemize} 
-\item We now therefore turn our attention to understanding the role of drawing in developing software
+\item We now therefore turn our attention to understanding \textcolor{red}{the role of \textbf{drawing} in developing \textbf{software}}
 \end{itemize} 
 
 \end{frame}
