--- a/P2023.AIBCCSS.L08.CognitiveModelsInSoftwareDevelopment.Change.tex
+++ b/P2023.AIBCCSS.L08.CognitiveModelsInSoftwareDevelopment.Change.tex
@@ -430,58 +430,416 @@ Source of the content: \url{https://www.calameo.com/read/000726878e48538138235}.
 \begin{itemize}
 \item \textcolor{red}{Is change possible?}
 \end{itemize} 
-\item And we will focus our analysis to a well defined context, the most challenging for changes
+\item And we will focus our analysis to a well defined context, the most challenging for changes:
 \begin{itemize}
 \item Is change possible \textcolor{red}{in development processes}?
 \end{itemize} 
-\item which amount to ask
+\item \textit{which amount to ask}:
 \begin{itemize}
 \item Is it possible to \textcolor{blue}{change how people use their individual and their collective minds} to develop software?
 \end{itemize} 
-\item and also
+\item \textit{and also}:
 \begin{itemize}
-\item Is the \textcolor{cyan}{\textbf{cognitive architecture immutable}}?
+\item Are \textcolor{cyan}{\textbf{cognitive architectures immutable}}?
 \end{itemize} 
 \end{itemize} 
 
 \end{frame}
 
 \begin{frame}
-{\centerline{The experiment of Belayev}}
+{\centerline{The experiment of Belyaev (1/3)}}
 
 
 \begin{itemize}
-\item 
+\item Researcher: Dmitry Belyaev
+\item Goal: to bread foxes with the behaviour of friendly dogs
+\item Location: Institute of Cytology and Genetics, Siberia
+\item Years: 1958 - now
+\item Structure
+\begin{itemize}
+\item Foxes originally bread for fur were tested for friendliness toward the human being
+\begin{itemize}
+\item just inserting a hand in the cage, nothing more
 \end{itemize} 
+\item those who were friendly were kept and mated
+\item this was repeated for generations after generations
+\item the six generation provided a huge surprise
+\end{itemize} 
+
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: Lyudmila Trut, Lee Alan Dugatkin ``Wild Foxes Can Be Transformed into Pets in a Few Generations,'' Scientific America, May 1, 2017 -- \url{https://www.scientificamerican.com/article/wild-foxes-can-be-transformed-into-pets-in-a-few-generations/}.
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{The experiment of Belyaev (2/3)}}
+
+
+\begin{itemize}
+\item At the sixth generation foxes appeared that had a very ``dog-like'' behaviour:
+\begin{itemize}
+\item being very friendly to humans, and seeking their contact,
+\item wagging tales,
+\item whining and whimpering,
+\item licking,
+\item recognizing their names.
+\end{itemize}  
+\end{itemize} 
+
+\begin{center}
+ \includegraphics[width=4cm]{P2023.AIBCCSS.Change/tamefoxes.jpg}
+ 
+ \end{center}
+
+
+\begin{center}
+\tiny
+Source of the content and of the picture: Lyudmila Trut, Lee Alan Dugatkin ``Wild Foxes Can Be Transformed into Pets in a Few Generations,'' Scientific America, May 1, 2017 -- \url{https://www.scientificamerican.com/article/wild-foxes-can-be-transformed-into-pets-in-a-few-generations/}.
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{The experiment of Belyaev (3/3)}}
+
+
+\begin{itemize}
+\item and this is not the end:
+\begin{itemize}
+\item  the percentage of tame foxes increased generation after generation
+\item after a while also the morphological features of the tame foxes changed:
+\begin{itemize}
+\item floppy ears,
+\item black and white colours,
+\item bushier tales, and once
+\item barked!
+\end{itemize}
+\end{itemize} 
+ 
+
+
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: Lyudmila Trut, Lee Alan Dugatkin ``Wild Foxes Can Be Transformed into Pets in a Few Generations,'' Scientific America, May 1, 2017 -- \url{https://www.scientificamerican.com/article/wild-foxes-can-be-transformed-into-pets-in-a-few-generations/}.
+\end{center}
+
+\end{frame}
+
+
+
+
+\begin{frame}
+{\centerline{Toward Cognitive Restructuring}}
+
+
+\begin{itemize}
+\item How can we translate this into software engineering
+\item Psychology has focused on changing the behaviour of people for decades
+\item We have found that an approach for treating people could be effective also in enacting positive changes of processes
+\begin{itemize}
+\item especially those related to agile methods, methods emphasizing cognitive architectures and collective intelligence
+\end{itemize} 
+\item Cognitive restructuring has been advocated as an approach
+\item Cognitive restructuring is strongly related to the dual impulsive/reflective model
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_restructuring}.
+\end{center}
 
 \end{frame}
 
 \begin{frame}
-{\centerline{Cognitive Restructuring}}
-
+{\centerline{Cognitive Behavioural Therapy (1/2)}}
 
 \begin{itemize}
-\item 
+\item Cognitive restructuring is at the root of \textcolor{red}{Cognitive Behavioural Therapy}
 \end{itemize} 
+
+\begin{center}
+ \includegraphics[width=6cm]{P2023.AIBCCSS.Change/Cognitive_behavioral_therapy.png}
+ 
+ \end{center}
+ 
+ \begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_behavioral_therapy}.
+\end{center}
+
 
 \end{frame}
 
 \begin{frame}
-{\centerline{Cognitive Restructuring and Agile Methods}}
-
+{\centerline{Cognitive Behavioural Therapy (2/2)}}
 
 \begin{itemize}
-\item 
+\item Centered on removing altered beliefs on the reality
+\item It is a talk therapy
+\item Based on the following steps (copied verbatim from wikipedia):
+\begin{itemize}
+\item Assessment or psychological assessment;
+\item Reconceptualization;
+\item Skills acquisition;
+\item Skills consolidation and application training;
+\item Generalization and maintenance;
+\item Post-treatment assessment follow-up.
 \end{itemize} 
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_behavioral_therapy}.
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Cognitive Restructuring (1/2)}}
+
+\begin{itemize}
+\item Cognitive restructuring focuses on eliminating problematic ``\textcolor{red}{automatic thoughts},'' which we can consider kind of \textcolor{cyan}{heuristics}
+\item We can perceive here the presence of the dual model \textcolor{orange}{Impulsive/Reflective}
+\item Four steps in cognitive restructuring
+\item \textit{(Again copying almost verbatim from wikipedia)}
+\begin{itemize}
+\item Identification of automatic thoughts
+\item Identification of the cognitive distortions in automatic thoughts
+\item Rational disputation of automatic thoughts with the Socratic method
+\item Development of a rational rebuttal to the automatic thoughts.
+\end{itemize} 
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_restructuring}.
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Cognitive Restructuring (2/2)}}
+
+\begin{itemize}
+\item There is a taxonomy of automatic thoughts
+\item \textit{(Again copying almost verbatim from wikipedia)}
+\begin{itemize}
+\item Self-evaluated thoughts
+\item Thoughts about the evaluations of others
+\item Evaluative thoughts about the other person with whom they are interacting
+\item Thoughts about coping strategies and behavioral plans
+\item Thoughts of avoidance
+\item Others
+\end{itemize} 
+\item Thoughts may be elicited and recorded via \textcolor{red}{Though Records}
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_restructuring}.
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Example of ``Thought Record'' in CBT}}
+
+\begin{center}
+ \includegraphics[width=9cm]{P2023.AIBCCSS.Change/thoughtRecord.jpg}
+ 
+ \end{center}
+ 
+ \begin{center}
+\tiny
+Source of the content: Ezawa ID, Hollon SD. Cognitive restructuring and psychotherapy outcome: A meta-analytic review. Psychotherapy (Chic). 2023 Mar 13, Fig. 1.
+\end{center}
+
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Effectiveness of Cognitive Restructuring}}
+
+\begin{center}
+ \includegraphics[width=12cm]{P2023.AIBCCSS.Change/effectivenessCR.jpg}
+ 
+ \end{center}
+ 
+ \begin{center}
+\tiny
+Source of the content: Ezawa ID, Hollon SD. Cognitive restructuring and psychotherapy outcome: A meta-analytic review. Psychotherapy (Chic). 2023 Mar 13, Fig. 2.
+\end{center}
+
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Applying cognitive restructuring}}
+
+\begin{itemize}
+\item Cognitive restructuring is most effective if the target of it understand its cognitive model:
+\begin{itemize}
+\item Frontal instruction
+\item Active modeling
+\item Role playing with feedback
+\item Supervision
+\end{itemize} 
+\item Start with negative automatic thoughts, especially in specific situations
+\item Then, extend to core beliefs
+\end{itemize} 
+
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_restructuring}.
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{FYI -- Specific practices related to CR}}
+
+\begin{itemize}
+\item Helping identifying, challenging, and correcting wrong negative thoughts, and thus:
+\begin{itemize}
+\item Treating several disorders, including depression, anxiety, social anxiety, obsessive–compulsive disorder, and posttraumatic stress disorder.
+\item Applying it to foster cognitive change and subsequent symptom improvement
+\end{itemize} 
+\item Problems of biases with marginalized populations.
+\item Recall that the goal is \textcolor{red}{not to minimize existing threats} but rather \textcolor{cyan}{\bf to get an accurate sense of what threats might be}.
+\end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: \url{https://en.wikipedia.org/wiki/Cognitive_restructuring}.
+\end{center}
 
 \end{frame}
 
 
 
+
+\begin{frame}{\centerline{XP and Cognitive Restructuring (1/3)}}
+
+\begin{itemize}
+\item  Extreme Programming (XP) is one of the \textcolor{cyan}{most relevant agile methods}
+\item  We can clearly see a neat application of CR and CBT in its structure:
+\begin{itemize}
+\item XP is structured in \textcolor{red}{Values}, \textcolor{blue}{Drivers}, and \textcolor{orange}{Practices}
+\end{itemize}
+\end{itemize}
+
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{itemize}
+\item 4 \textcolor{red}{Values}:
+\begin{itemize}
+\item  Simplicity
+\item Communication
+\item Feedback
+\item Courage
+\end{itemize}
+\end{itemize}
+
+\end{column}
+
+\begin{column}{0.5\textwidth} 
+\begin{itemize}
+\item 3 \textcolor{blue}{Drivers}:
+\begin{itemize}
+\item  Focus on value
+\item  Constant flow of activities
+\item  No defects
+\end{itemize}
+\end{itemize}
+
+\end{column}
+
+\end{columns}
+
+
+\end{frame}
+%=============================================
+
+%---------------------------------------------
+\begin{frame}{\centerline{ XP and Cognitive Restructuring (2/3)}}
+% Nr:33
+
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.Change/valuesDrivers.XP.png}
+ 
+ \end{center}
+
+\end{frame}
+%=============================================
+
+%---------------------------------------------
+\begin{frame}{\centerline{XP and Cognitive Restructuring (3/3)}}
+% Nr:34
+
+\begin{center}
+\textcolor{orange}{\bf Practices:}
+\end{center}
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+
+\begin{itemize}
+\item  Planning game
+\item Short releases
+\item Metaphor
+\item  Simple design
+\item Test-driven development
+\item  Refactoring
+\end{itemize}
+
+\end{column}
+\begin{column}{0.5\textwidth} 
+
+\begin{itemize}
+\item  Pair programming
+\item Collective code ownership
+\item Continuous integration
+\item 40 hours working week
+\item On-site customer
+\item Coding standards
+\end{itemize}
+\end{column}
+
+\end{columns}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Extreme Programming -- \textcolor{red}{Embrace Change}}}
+
+\begin{center}
+ \includegraphics[width=5cm]{P2023.AIBCCSS.Change/extremeProgrammingCover.jpg}
+ 
+ \end{center}
+ 
+ \begin{center}
+\tiny
+Source of the picture: Front cover of: Beck, K. (1999). Extreme Programming Explained: Embrace Change. Addison-Wesley Publishing Company.
+\end{center}
+
+
+\end{frame}
 
 
 \begin{frame}
 {\centerline{Questions?}}
+
 \vspace{1cm}
 \begin{center}
     \LARGE{End of lecture eight.}
